# trakr

./: .gitignore  BUILD  README.md  WORKSPACE
api/: BUILD.bazel  api.go
models/: BUILD  BUILD.bazel  entity.go  payslip.go
scripts/: build_status.sh
server/: BUILD  BUILD.bazel  main.go
