load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/rockstardevs/trakr/server",
    visibility = ["//visibility:private"],
    deps = [
        "//api:go_default_library",
        "@com_github_golang_glog//:go_default_library",
        "@com_github_gorilla_mux//:go_default_library",
    ],
)

go_binary(
    name = "server",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
    x_defs = {
        "main.BUILD_PROJECT": "{BUILD_PROJECT}",
        "main.BUILD_VERSION": "{BUILD_VERSION}",
        "main.BUILD_TIMESTAMP": "{BUILD_TIMESTAMP}",
    },
)
